--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div id="loading">Please wait for libraries to load... <span id="loaded">0</span>/<span id="total"></span></div>
         <div id="container">
             <h1>Big integer benchmarks</h1>
-            some performance benchmarks for different libraries that do arbitrary precision integer arithmetic. Keep in mind that the results shown here are only a rough estimate of the relative performance and can change significantly from run to run, as well as across different runtime environments.<br />
+            Some performance benchmarks for different libraries that do arbitrary precision integer arithmetic. Keep in mind that the results shown here are only a rough estimate of the relative performance and can change significantly from run to run, as well as across different runtime environments.<br />
             <button id="btnRunAll">Run all benchmarks</button>
             <div id="benchmarks"></div>
         </div>
